--- a/package.json
+++ b/package.json
@@ -3,14 +3,27 @@
     "dev": "next"
   },
   "dependencies": {
+    "gray-matter": "4.0.3",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "14.0.1",
+    "remark-autolink-headings": "7.0.1",
+    "remark-gfm": "2.0.0",
+    "remark-react": "9.0.1",
+    "remark-slug": "7.0.0",
+    "sass": "1.37.5"
   },
   "devDependencies": {
     "@types/node": "16.6.1",
     "@types/react": "17.0.18",
     "@types/react-dom": "17.0.9",
+    "eslint": "7.25.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint-plugin-react": "7.23.2",
+    "prettier": "2.2.1",
     "typescript": "4.3.5"
   }
 }
